tests/regression/error/cocospec_out_assume.lus
contract bla_spec(in: real ; ignored: bool) returns (out: real) ;
let
  assume out > (0.0 -> pre in) ;
  assume in <> 0.0 ;
  assume not ignored ;
  guarantee out = in - 1.0 ;

  mode mode_1 (
    require in > 1.0 ;
    ensure out > 7.0 ;
    ensure out > 0.0 ;
    ensure out > 5.0 ;
  ) ;

  mode mode_2 (
    require in <= 1.0 ;
    ensure out < 7.0 ;
    ensure out < 0.0 ;
    ensure out < 5.0 ;
    ensure out < -3.0 ;
  ) ;
tel

contract bli_spec (in: real ; ignored: bool) returns (out: real) ;
let
  guarantee out = in - 1.0 ;
  import bla_spec (in, ignored) returns (out) ;
tel

node bla(in: real ; ignored: bool) returns (out: real) ;
(*@contract
  import bla_spec (in, ignored) returns (out) ;
*)
let
  out = if ignored then in - 1.0 else in - 1.0 ;
tel

node bli(in: real ; ignored: bool) returns (out: real) ;
(*@contract
  import bli_spec (in, ignored) returns (out) ;
  import bla_spec (in, ignored) returns (out) ;
*)
let
  out = bla(in, ignored) ;
tel